# rhc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  style.md
examples/: dynarray.c  hashmap.c  main.c  print.c  safety.c  socket_client.c  socket_server.c  str.c
include/rhc/: alloc.h  allocator.h  assume.h  common.h  dynarray.h  endian.h  error.h  file.h  hashmap.h  hashmap_string.h  log.h  memory.h  print.h  rhc.h  rhc_full.h  socket.h  str.h  str_parse.h  str_type.h  strbuf.h  stream.h  string.h  terminalcolor.h  time.h  types.h
include/rhc/impl/: allocator_impl.h  assume_impl.h  file_impl.h  log_impl.h  socket_impl.h  stream_impl.h  string_impl.h  time_impl.h
template/: template.py
template/in/rhc/: LICENSE  allocator.h  assume.h  common.h  dynarray.h  endian.h  error.h  export.h  file.h  hashmap.h  hashmap_string.h  hashmap_trivial.h  log.h  memory.h  rhc.h  rhc_full.h  rhc_impl.h  socket.h  str.h  str_parse.h  str_type.h  stream.h  string.h  terminalcolor.h  time.h
template/in/rhc/impl/: allocator_impl.h  assume_impl.h  error_impl.h  file_impl.h  log_impl.h  memory_impl.h  socket_impl.h  str_impl.h  stream_impl.h  string_impl.h  terminalcolor_impl.h  time_impl.h
